# IO_bank

./: Bank.vpp  README.md  another_bank.vpp.bak_000f
Bank/: Bank.sln  Bank.vcxproj
BankImpl/: .gitignore  BankImpl.cpp  BankImpl.sln  BankImpl.vcxproj  BankImpl.vcxproj.filters  CMakeLists.txt  Data.cpp  KontoBankowe.cpp  Kredyt.cpp  Przelew.cpp  Uzytkownik.cpp  bank.h  main.cpp  resource.h
BankImpl/BankImpl_lib/: CMakeLists.txt  Data.cpp  KontoBankowe.cpp  Lokata.cpp  Osoba.cpp  Przelew.cpp  Uzytkownik.cpp  bank.h
BankImpl/Boost_tests/: CMakeLists.txt  UzytkownikTest.cpp
BankImpl/Debug/: BankImpl.ilk  vc142.idb
BankImpl/Debug/BankImpl.tlog/: BankImpl.lastbuildstate  CL.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bankApp/: BankAPP.cpp  BankAPP.sln  BankAPP.vcxproj  BankAPP.vcxproj.filters
bankApp/bankApp/: bankApp.cbp
